# esm-agentbench

./: .dockerignore  .gitignore  AGENT_PROVENANCE.md  APPLY_CHANGE.sh  BENCHMARKS.md  CHANGELOG.md  CODE_REVIEW_IMPLEMENTATION.md  CONTRIBUTING.md  CONTRIBUTORS.md  CONTRIBUTOR_LICENSE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INSTRUCTIONS.md  IP_NOTICE.md  LICENSE  NUMERICAL_FALLBACK_IMPROVEMENTS.md  PATENT_SAFE.md  PR_NOTE.txt  QUICKSTART.md  README.md  REVIEWED_BY_ANDREU.md  RUNBOOK.md  THEORY.md  agent_card.toml  agentbeats-run  build_kernel.sh  demo.sh  demo_logging_improvements.py  evaluation_config.yaml  healthcheck.py  make_demo_auto.sh  pyproject.toml  requirements.txt  run_judge_mode.py  sitecustomize.py
.well-known/: agent-card.json
DOCS/: AGENTBEATS_INTEGRATION.md  ARCHITECTURE.md  EVALUATION.md  appendix.md
SUBMISSIONS/: README.md
UELAT/: .CertificateCore.aux  .CertificateProofs.aux  .Checker.aux  .KernelExtract.aux  .spectral_bounds.aux  BUILD.md  CertificateCore.v  CertificateProofs.v  Checker.v  ErrorBound.v  Extraction.v  KernelExtract.v  Kernel_runtime.ml  WitnessSpec.v  checker_verified.ml  checker_verified.mli  kernel_main.ml  kernel_verified.mli  opam  spectral_bounds.v  uelat_constants.json
adapters/: __init__.py  embedder_sentence_transformers.py  inference_huggingface.py  kernel_client.py  signer_gpg.py  storage_fs.py
analysis/: README.md  convert_trace.py  run_experiment.py  run_real_hf_experiment.py  stat_inference.py
apps/: make_certificate_app.py
assessor/: __init__.py  app.py  call_agent_api.py  kickoff.py  robustness.py
benchmarks/: README.md  run_halueval.py  run_real_benchmark.py  run_truthfulqa.py  utils.py
certificates/: __init__.py  artifact_signing.py  calibration_sentence-transformers.json  calibration_tfidf.json  cert_bundle.py  check_certificate.py  embedder_checks.py  kernel_client.py  kernel_server.py  kernel_service.py  make_certificate.py  make_certificate_cli.py  numerics.py  spectral_prover.py  uelat_bridge.py  uelat_constants_example.json  verified_kernel.py  verify_bound.py  witness_checker.py
ci/: verify_submission.sh
config/: calibration.json  residuals.csv
core/: __init__.py  certificate.py
demo_swe/: index.html  leaderboard.html  report.json
dev-tools/: Dockerfile.kernel
docs/: AGENTBEATS_INTEGRATION.md  ARCHITECTURE.md  DEMO_SCRIPT.md  EVALUATION.md  HEXAGONAL_ARCHITECTURE.md  HEXAGONAL_ARCHITECTURE_SUMMARY.md  KERNEL_ASSUMPTIONS.md  KERNEL_SEMANTICS.md  KERNEL_SERVER_DEPLOYMENT.md  NUMERICAL_CONTRACT.md  NUMERICAL_IMPROVEMENTS.md  NUMERICAL_THRESHOLDS.md  REAL_AGENT_HF_EVAL.md  SPECTRAL_THEORY.md  VERIFYING_CERTIFICATES.md  abstract.txt  real_trace_validation.md
esmassessor/: artifact_schema.py  artifacts.py  base.py  config.py  green_executor.py  green_server.py  kernel_adapter.py  write_artifact.py
legacy/: README.md  (+2 more)
(+785 files in other folders)
